refactor: say what the code means with what the baseline now offers
Reading the first element of a list said `get(0)`, which is an index that happens
to be zero; `getFirst()` is the thing being asked for. Collecting a stream that
nobody mutates went through a collector; `toList()` is shorter and hands back
something that cannot be changed by accident — where inference then needed a
witness, that is because the element type used to come from the target rather
than from the stream. A caught exception nobody reads is now `_`, which says it
was ignored on purpose rather than left lying around. Dispatch on the kind of a
type declaration is a switch over patterns rather than a chain of `instanceof`
returning early.

Generated code moves with it: a statement returning one value asked
`list.size() > 0` and then `list.get(0)`, and now asks whether the list is empty
and takes its first element.

An undocumented `<release>11</release>` in the shared example module went too. It
predates both the Java 17 and the Java 25 baseline, holds hand-written driver
classes rather than generated code, and so was pinning a floor nothing stood on.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>