@@ -66,7 +66,7 @@ class DefaultReadMethodGeneratorTest {
                             while (resultSet.next()) {
                               list.add(toMap.apply(resultSet));
                             }
-                            return list.size() > 0 ? java.util.Optional.ofNullable(list.get(0)) : java.util.Optional.empty();
+                            return list.isEmpty() ? java.util.Optional.empty() : java.util.Optional.ofNullable(list.getFirst());
                           }
                         }
                       }
@@ -122,7 +122,7 @@ class DefaultReadMethodGeneratorTest {
                             while (resultSet.next()) {
                               list.add(toMap.apply(resultSet));
                             }
-                            return list.size() > 0 ? java.util.Optional.ofNullable(list.get(0)) : java.util.Optional.empty();
+                            return list.isEmpty() ? java.util.Optional.empty() : java.util.Optional.ofNullable(list.getFirst());
                           }
                         }
                       }
