@@ -265,7 +265,7 @@ class DefaultWriteMethodGeneratorTest {
                             while (resultSet.next()) {
                               list.add(toMap.apply(resultSet));
                             }
-                            return list.size() > 0 ? java.util.Optional.ofNullable(list.get(0)) : java.util.Optional.empty();
+                            return list.isEmpty() ? java.util.Optional.empty() : java.util.Optional.ofNullable(list.getFirst());
                           }
                         }
                       }
@@ -322,7 +322,7 @@ class DefaultWriteMethodGeneratorTest {
                             while (resultSet.next()) {
                               list.add(toMap.apply(resultSet));
                             }
-                            return list.size() > 0 ? java.util.Optional.ofNullable(list.get(0)) : java.util.Optional.empty();
+                            return list.isEmpty() ? java.util.Optional.empty() : java.util.Optional.ofNullable(list.getFirst());
                           }
                         }
                       }
